# bobble_description

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  MigrationPlan.md  README.md  package.xml  setup.py
.vscode_settings/: settings.json
config/: ros2_controllers.yaml
launch/: bobble.launch  bobble.launch.py  bobble_sim.launch  bobble_sim.launch.py  bobble_sim_no_gui.launch  run_sim_with_joystick.launch
meshes/: battery.stl  chassis.dae  chassis.dae.REMOVED.git-id  chassis_orange.stl  realsense.stl  wheel.dae  wheel.stl
params/: ros_gz_bridge_params.yaml
plots/: BobbleDebug.xml  BobbleDebugHwController.xml  BobbleDebugSimController.xml  FilterHwTesting.xml
src/nodes/: BobbleStateHold
views/: bobble_view.rviz
worlds/: empty_world.world
xacro/: bno055_imu.urdf.xacro  bobble.gazebo  bobble.urdf.xacro  bobble_battery.urdf.xacro  bobble_chassis.urdf.xacro  bobble_chassis2.urdf.xacro  bobble_electronics.urdf.xacro  bobble_realsense.urdf.xacro  bobble_world.urdf.xacro  camera.urdf.xacro  left_wheel.urdf.xacro  right_wheel.urdf.xacro
xacro/materials/: materials.xacro
