<?xml version="1.0"?>
<package>
  <name>bobble_description</name>
  <version>1.0.0</version>
  <description>Holds BobbleBot URDF</description>
  <maintainer email="mike.moore@so.engineering">Mike Moore</maintainer>
  <license>BSD</license>
  <url type="website">todo</url>
  <author email="mike.moore@so.engineering">Mike Moore</author>
  <buildtool_depend>catkin</buildtool_depend>
</package>