<?xml version="1.0"?>
<package format="3">
  <name>bobble_description</name>
  <version>1.0.0</version>
  <description>Holds BobbleBot URDF</description>
  <maintainer email="mike.moore@so.engineering">Mike Moore</maintainer>
  <license>BSD</license>
  <url type="website">todo</url>
  <author email="mike.moore@so.engineering">Mike Moore</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>gazebo_ros2_control</build_depend>
  <build_depend>gazebo_ros_pkgs</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  
  <exec_depend>gazebo_ros2_control</exec_depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_image</depend>
  <depend>ros_gz_sim</depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>